--- a/public/css/admin.scss
+++ b/public/css/admin.scss
@@ -1,27 +1,15 @@
 @import 'SASS/variables';
+@import 'admin/home';
 @import 'admin/teams';
+@import 'admin/instalaciones';
 
 /*--- HOME ---*/
-.side_calendar_panel{
-  &:first-child{
-    margin-bottom:30px;
-  }
-}
+
 .side_calendar{
   .ppns-cal__cell span{
     height:25px;
     width:25px;
     line-height:25px;
-  }
-}
-.info_panel{
-  text-align:center;
-  font-size:1.2em;
-  font-weight:bold;
-  color:$primary-color;
-  padding-top:15px;
-  .material-icons{
-    color: $dark-primary-color;
   }
 }
 #add_event{
@@ -42,334 +30,6 @@
     }
   }
 }
-.event_modal{
-  top:100px;
-  input{
-    border:none;
-    border-bottom:solid 1px $primary-color;
-    padding:10px 15px;
-    &:focus{
-      outline:none;
-    }
-  }
-  #add_categories_event{
-    color:$dark-primary-color;
-    cursor:pointer;
-    border:solid .8px;
-    padding:5px;
-    &:hover{
-      transform:scale(1.006);
-    }
-    .material-icons{
-      margin-right:3px;
-    }
-  }
-  .event_categorie{
-    box-shadow:1px 1px 2px -1px;
-    font-size:.8em;
-    margin-left:15px;
-    border-radius:15px;
-    padding:5px 10px;
-    display:flex;
-    align-items:center;
-    &.selected{
-      color:white;
-      .material-icons{
-        margin-left:5px;
-        cursor:pointer;
-      }
-    }
-  }
-  #add_rep_event{
-    font-size:.9em;
-    cursor:pointer;
-    border:solid .8px;
-    border-radius:15px;
-    padding:5px 15px;
-    font-weight:bold;
-    background-color:#fafafa;
-    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.5);
-    &:hover{
-      transform: scale(1.006);
-    }
-    .material-icons{
-      margin-left:3px;
-    }
-  }
-  .foot-option{
-    font-size:.9em;
-    cursor:pointer;
-    &.cancel_option{
-      color:$dark-cancel-color;
-    }
-    &.save_option{
-      color:$save-color;
-    }
-  }
-  .material-icons{
-    text-align:center;
-    font-size:1em;
-  }
-  //Panel de categorias
-  .categories_event_panel{
-    position:absolute;
-    top:0;
-    left:30%;
-    right:0;
-    transform:perspective(400px) rotateY(90deg);
-    min-width:300px;
-    transition:transform .5s cubic-bezier(0,0,.5,1),opacity .2s linear;
-    transform-origin:left;
-    opacity:0;
-    &.active{
-      transform:perspective(400px);
-      transition:transform .5s cubic-bezier(0,0,.5,1),opacity .2s linear;
-      opacity:1;
-    }
-    .panel-title{
-      font-weight:bold;
-      button{
-        font-size:.9em;
-      }
-      .material-icons.back_icon{
-        position:absolute;
-        left:0;
-        top:0;
-        padding:10px;
-        font-size:.9em;
-        opacity:.5;
-        cursor:pointer;
-      }
-    }
-    .panel_body{
-      opacity:0;
-      display:none;
-      &.active{
-        opacity:1;
-        display:block;
-      }
-    }
-    .categorie{
-      padding:5px 10px;
-      font-size:.8em;
-      border-radius:7px;
-      cursor:pointer;
-      width:100%;
-      max-width:100%;
-      transition:transform .3s,box-shadow .3s;
-      color:white;
-      margin-bottom:5px;
-      &:hover{
-        box-shadow: 1px 5px 17px 0 rgba(0, 0, 0, 0.1);
-        transform: scale(1.007);
-      }
-    }
-    #add_new_categorie{
-      background-color:darkgrey;
-      color:black;
-      display:flex;
-      align-items: center;
-      margin-top:10px;
-      &:hover{
-        transform:scale(1);
-        box-shadow:none;
-        background-color:gray;
-      }
-      .material-icons{
-        position:relative;
-        left:0;
-        color:black;
-        margin-right:10px;
-      }
-    }
-    .categorie_row .material-icons{
-      position:absolute;
-      right:15px;
-      cursor:pointer;
-      color:$divider-color;
-    }
-    #create_category{
-      .title{
-        font-size:.9em;
-        font-weight:bold;
-        &.error{
-          color:red;
-          &:after{
-            content:'*';
-            color:red;
-          }
-        }
-      }
-      input{
-        border:solid 1px $dark-color-resaltado;
-        border-radius:5px;
-        padding:5px;
-        width:70%;
-        &.error{
-          border-color:$dark-cancel-color;
-        }
-      }
-      .color_grid_selection{
-        display:flex;
-        flex-wrap: wrap;
-        margin-top:2px;
-        .color_selection{
-          height:50px;
-          width:50px;
-          border-radius:5px;
-          margin:0 3px 3px 0;
-          cursor:pointer;
-          position:relative;
-          &:hover{
-            opacity:.7;
-          }
-          .material-icons{
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            color: white;
-            transform: translate(-50%,-50%);
-            font-size: 1.2em;
-            opacity:0;
-            transition:opacity .2s linear;
-          }
-          &.selected .material-icons{
-            opacity:1;
-          }
-        }
-      }
-    }
-  }
-
-  //Panel de evento
-  .repeat_event_panel{
-    position:absolute;
-    display:none;
-    right:15px;
-    bottom:15px;
-    left:15px;
-    top:15px;
-    transform:translate(-25%,0);
-    opacity:0;
-    transition:transform .3s ease-out,opacity .15s linear;
-    &.active{
-      transform:translate(0,0);
-      opacity:1;
-    }
-    .options_body{
-      padding:25px 0;
-      height:300px;
-      .repeat_option{
-        border-bottom: solid 1px #00796B;
-        cursor: pointer;
-        font-size: 0.9em;
-        padding-left: 15px;
-        height: calc(100% / 7);
-        display: flex;
-        align-items: center;
-        &:hover{
-          background-color:$light-primary-color;
-        }
-        &.selected{
-          background-color:$dark-primary-color;
-          color:white;
-          &:hover{background-color:$dark-primary-color;}
-
-        }
-      }
-    }
-  }
-  //Repeticion evento
-  .repeat_selection{
-    height:0;
-    &.active{
-      height:100%;
-    }
-    //Informacion de la repeticion
-    #picker_repeat{
-      border-bottom:solid 1px $divider-color;
-      opacity:0;
-      display:none;
-      transition:opacity .2s linear .3s;
-      height:25px;
-      &.active{
-        opacity:1;
-      }
-      #picker_repeat_input, .material-icons{
-        color:$divider-color;
-        cursor:pointer;
-      }
-    }
-    #info_repeat_event{
-      color:$divider-color;
-      margin:5px 15px;
-      font-size:.8em;
-      text-align:center;
-      &:before{
-        content:'*';
-      }
-    }
-    //Seleccionar dia del mes
-    #day_month_select{
-      transition:opacity .2s linear .4s;
-      opacity:0;
-      display:none;
-      &.active{
-        opacity:1;
-      }
-      td.day_month_table{
-        text-align:center;
-        cursor:pointer;
-        &:hover{
-          background-color:$light-primary-color;
-        }
-        &.selected{
-          &:hover{
-            background-color:$dark-primary-color;
-          }
-          background-color:$dark-primary-color;
-          color:white;
-        }
-      }
-    }
-    //Seleccionar dia de la semana
-    #day_repeat{
-      transition:opacity .2s linear .4s;
-      opacity:0;
-      display:none;
-      &.active{
-        opacity:1;
-      }
-      .col{
-        border:solid 1px $primary-color;
-        border-right:none;
-        height:35px;
-        line-height: 35px;
-        cursor:pointer;
-        &:first-child{
-          border-top-left-radius:4px;
-          border-bottom-left-radius:4px;
-        }
-        &:last-child{
-          border-right:solid 1px $primary-color;
-          border-top-right-radius:4px;
-          border-bottom-right-radius: 4px;
-        }
-        &.selected{
-          background-color:$primary-color;
-          color:white;
-          &:hover{
-            background-color:$primary-color;
-          }
-        }
-        &:hover{
-          background-color:$light-primary-color;
-        }
-      }
-    }
-  }
-
-}
 
 /*--- EQUIPO TECNICO ---*/
 .panel_header{
@@ -386,10 +46,6 @@
       text-decoration: underline;
     }
   }
-}
-.panel_body{
-  margin-top:25px;
-  height:calc(70% - 25px);
 }
 #tecnicos_content{
   margin:0 20px;
@@ -438,97 +94,6 @@
   &:hover{
     background-color:black;
     color:white;
-  }
-}
-
-/*--- EQUIPO ---*/
-.team_header_tab{
-  @media #{$media} and #{$pantallaSmall}{
-    font-size:12px;
-    margin:10px 5px;
-    padding:0;
-  }
-  text-transform: uppercase;
-  padding:10px;
-  margin:10px;
-  cursor:pointer;
-  &.active{
-    &:after{
-      width:100%;
-    }
-  }
-  &:hover:after{
-    width:100%;
-  }
-  &:after{
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    background: #000;
-    transition: width .3s;
-  }
-}
-.team_detail_content{
-  opacity:0;
-  display:none;
-}
-
-.panel_select_overlay{
-  position:fixed;
-  top:0;
-  left:0;
-  z-index:9999;
-  background-color:rgba(255,255,255,0.96);
-  opacity:0;
-  visibility: hidden;
-  transform:perspective(100vw) translate3d(0,0,-200px);
-  transition:opacity 0.4s,transform 0.4s;
-  &.animate{
-    opacity:0.9;
-    visibility: visible;
-    transform:perspective(100vw) translate3d(0,0,0);
-  }
-  .selector_options{
-    font-size:1.3em;
-    font-weight:bold;
-    ul{
-      list-style-type: none;
-      padding:0;
-    }
-    .option{
-      cursor:pointer;
-      color:#95948f;
-      &.selected{
-        color:darkorange;
-      }
-    }
-  }
-  .selector_title{
-    color:#bbb9b4;
-    text-transform:uppercase;
-    font-size:0.9em;
-  }
-  .first-row{
-    text-align:right;
-  }
-}
-
-#select_team_icon{
-  border-radius: 50%;
-  //box-shadow: 0 0 2px black;
-  border: solid 0.08em;
-  padding: 7px;
-  position: relative;
-  height: 40px;
-  width: 40px;
-  margin-left: 10px;
-  cursor:pointer;
-  &:hover{
-    transform:scale(1.08, 1.08);
-    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.38);
-    //color:white;
-    //background-color:black;
   }
 }
 
