--- a/public/css/register.scss
+++ b/public/css/register.scss
@@ -1,7 +1,5 @@
 .register-form-container{
-  background-color:#607D8B;
-  opacity:0.65;
-  height:100%;
+  background-image:url('../imagenes/bienvenida.jpg');
   .register-form{
     background-color:white;
     margin:0 20px;
