--- a/public/css/SASS/layout.scss
+++ b/public/css/SASS/layout.scss
@@ -7,6 +7,17 @@ html,body{
   overflow:scroll;
   background-color:#fafafa;
 }
+.d-sm-none{
+  @media #{$media} and #{$pantallaSmall}{
+    display:none !important;
+  }
+}
+.d-sm-flex{
+  display:none !important;
+  @media #{$media} and #{$pantallaSmall}{
+    display:flex !important;
+  }
+}
 /*--- CABECERA ---*/
 .header{
   position:fixed;
@@ -20,6 +31,12 @@ html,body{
   padding:0 40px;
   border-bottom:solid .9px $divider-color;
   margin:0;
+  display:flex;
+  align-items:center;
+  .header_menu{
+    height:100%;
+    margin-left:0;
+  }
   .header_link{
     cursor:pointer;
     &.item{
@@ -30,6 +47,7 @@ html,body{
       height:100%;
       align-items:center;
       justify-content: center;
+      position:relative;
       @media(max-width:768px){
         font-size:0.9em;
       }
@@ -91,8 +109,13 @@ html,body{
     top:unset;
     bottom:0;
     padding:0;
-    box-shadow: 0 -5px 25px -8px rgba(0, 0, 0, 0.75);
+    box-shadow:0 -5px 6px -9px rgba(0, 0, 0, 0.75);
+    justify-content:space-around;
+    border:none;
     .header_link{
+      &:after{
+        top:0;
+      }
       &#home_link img{
         height:70%;
       }
@@ -112,39 +135,83 @@ html,body{
 
 /*--- CONTENIDO ---*/
 .main_content{
-  padding-top:100px;
+  padding-top:65px;
   @media #{$media} and #{$pantallaSmall}{
-    padding-top:10px;
+    padding-top:0;
   }
 }
+
 .main_panel{
-  border-radius:10px;
-  padding:0 20px 20px;
-  -webkit-box-shadow: 2px 7px 15px -10px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 7px 15px -10px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 7px 15px -10px rgba(0, 0, 0, 0.75);
+  padding:10px 20px 20px;
   background-color:white;
-  max-height:calc(100vh - 150px);
   overflow:scroll;
   @media #{$media} and #{$pantallaSmall}{
-    box-shadow:none;
     background-color:#fafafa;
-    padding:0;
   }
 }
+
 .main_section{
-  position:absolute;
+  position:relative;
   transform:perspective(100vw) translate3d(0,0,-200px);
   transition:transform .25s, opacity .2s;
   background-color:#fafafa;
-  margin:0 -15px;
-  height:calc(100% - 100px);
   opacity:0;
+  margin:0 15px;
   &.active{
     transform:perspective(100vw) translate3d(0,0,0);
     opacity:1;
   }
+  @media #{$media} and #{$pantallaSmall}{
+    margin:0;
+  }
 }
+
+.second_header{
+  position:relative;
+  height:150px;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
+  z-index:3;
+  &:before{
+    content:'';
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background-color:black;
+    opacity:.6;
+  }
+  .title{
+    font-size:4em;
+    color:white;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    font-family:Comfortaa,cursive;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  @media #{$media} and #{$pantallaSmall}{
+    height:60px;
+    .title{
+      font-size:2em;
+    }
+  }
+}
+
+.content_section{
+  opacity:0;
+  transform:perspective(100vw) translate3d(0,0,-200px);
+  transition:transform .25s, opacity .2s;
+  &.active{
+    opacity:1;
+    transform:perspective(100vw) translate3d(0,0,0);
+  }
+}
+
 /*--- MENU ---*/
 .panel-fondo{
   position:fixed;
