--- a/public/css/calendar.scss
+++ b/public/css/calendar.scss
@@ -1,11 +1,10 @@
 @import 'SASS/variables';
-
+@import 'calendar/events';
 /*------------------------------------------------------------
   ---------------------- GENERAL -----------------------
 ------------------------------------------------------------*/
 .ppns-main{
   font-family:$fuente_texto;
-  margin-top:15px;
 }
 //FILAS
 .ppns-cal__row{
@@ -37,12 +36,68 @@
   ---------------------- CABECERA -----------------------
 ------------------------------------------------------------*/
 .wrapper{
+  &:not(.main){
+    margin-bottom:10px;
+  }
   //Cabecera Principal
   &.main{
-    justify-content: space-between;
-    margin:0 -15px;
     height:60px;
-    padding:20px 20px 0;
+    top:-10px;
+    z-index:2;
+    background-color:white;
+    position:sticky;
+    @media #{$media} and #{$pantallaSmall}{
+      top:0;
+      height:30px;
+      font-size:.8em;
+    }
+    .header_info{
+      position:absolute;
+      left:0;
+      text-transform: uppercase;
+      @media #{$media} and #{$pantallaSmall}{
+        left:unset;
+      }
+     }
+    .ppns_sel_view{
+      position:absolute;
+      right:0;
+      display:flex;
+      margin-right:100px;
+      @media #{$media} and #{$pantallaSmall}{
+        display:none;
+      }
+      .sel_view{
+        width:100px;
+        display:block;
+        text-align:center;
+        color:$textoCabecera;
+        cursor:pointer;
+        &:hover{
+          color:$dark-primary-color;
+        }
+        &.active{
+          border-bottom:solid 2px $dark-primary-color;
+          font-weight:bold;
+          color:$dark-primary-color;
+        }
+      }
+    }
+    .ppns_today{
+      position:absolute;
+      right:0;
+      border:solid 1px $dark-primary-color;
+      padding:2px 5px;
+      &:hover{
+        color:white;
+        background-color:$dark-primary-color;
+        cursor:pointer;
+      }
+      @media #{$media} and #{$pantallaSmall}{
+        border:none;
+        right:5px;
+      }
+    }
   }
   //Cabecera Secundaria
   display:flex;
@@ -51,47 +106,7 @@
   font-size:1em;
   letter-spacing: 2px;
   height:30px;
-  margin:10px -15px;
   flex-wrap:wrap;
-  position:sticky;
-  top:0;
-  z-index:2;
-  background-color:white;
-  .ppns_sel_view{
-    display:flex;
-    margin-right:100px;
-    .sel_view{
-      width:100px;
-      display:block;
-      text-align:center;
-      color:$textoCabecera;
-      cursor:pointer;
-      &:hover{
-        color:$dark-primary-color;
-      }
-      &.active{
-        border-bottom:solid 2px $dark-primary-color;
-        font-weight:bold;
-        color:$dark-primary-color;
-      }
-    }
-  }
-  .month_year_info{
-    text-transform: uppercase;
-  }
-  .left_info{
-    display:flex;
-  }
-  .ppns_today{
-    border:solid 1px $dark-primary-color;
-    border-radius:15px;
-    padding:2px 5px;
-    &:hover{
-      color:white;
-      background-color:$dark-primary-color;
-      cursor:pointer;
-    }
-  }
   .month_year{
     display:flex;
     flex-flow:row wrap;
@@ -143,6 +158,7 @@
   ---------------------- VISTA DEl MES -----------------------
 ------------------------------------------------------------*/
 .monthView{
+
   //Cada fila
   .ppns-cal__row{
     //Vista del calendario secundario
@@ -249,15 +265,20 @@
     z-index:1;
   }
   .ppns-cal__row{
-    height:50px;
+    height:60px;
     &:not(:first-child){
       border-top:solid 1px $divider-color;
     }
     &.head{
       position:sticky;
-      top:60px;
+      top:50px;
       background-color:white;
       z-index:4;
+      height:35px;
+      @media #{$media} and #{$pantallaSmall}{
+        top:30px;
+        font-size:.7em;
+      }
     }
     &.older{
       background-color:#fafafa;
