--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -1,35 +1,103 @@
 @import 'SASS/_variables';
 
+/*--- FONDO Y BOTONES DE INICIO ---*/
 .login-bck{
   background:$imagen-inicio-fondo no-repeat center;
   height:100%;
   width:100%;
   background-size: cover;
   position:fixed;
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  .buttons-container{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+  }
 }
 .seccion-inicial{
   transform:scale(0);
   text-align:center;
-  transition: transform 1s;
+  transition: transform 0.3s ease-in;
+  &.animate{
+    transform:scale(1);
+  }
 }
+
 .seccion-inicial.animate{
   transform:scale(1);
 }
-.welcome-form-container{
+
+/*--- FORMULARIO LOGIN ---*/
+#login-form-panel{
+  display:none;
+  opacity:0;
   position:absolute;
-  .form-panel{
-    display:none;
-  }
+  min-width:30%;
 }
-.login-container{
-   height:100%;
+/*--- FORMULARIO REGISTRO ---*/
+#registerClub-form-panel{
+  display:none;
+  opacity:0;
+  position:absolute;
 }
 .club-register-form{
   text-align:left;
 }
 
+/*--- PANEL DE EXITO AL REGISTRAR EL CLUB ---*/
 .panel-success{
-  height:80%;
   overflow:scroll;
   text-align:center;
+  font-family:Raleway, sans-serif;
+  .panel-title{
+    color:#004c40;
+  }
+  .panel-footer{
+    margin-top:1rem;
+  }
+  .follow_icons img{
+    cursor:pointer;
+    width:3em;
+  }
+}
+
+/*--- CHECK VERDE AL REGISTRARTE ---*/
+svg {
+  width: 100px;
+  display: block;
+  margin: 40px auto 0;
+}
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+  &.circle {
+    -webkit-animation: dash 1.5s ease-in-out;
+    animation: dash 1.5s ease-in-out;
+  }
+  &.check {
+    stroke-dashoffset: -100;
+    -webkit-animation: dash-check 1.5s .55s ease-in-out forwards;
+    animation: dash-check 1.5s .55s ease-in-out forwards;
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash-check {
+  0% {
+    stroke-dashoffset: -100;
+  }
+  100% {
+    stroke-dashoffset: 900;
+  }
 }
