--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -3,21 +3,7 @@
 @import 'SASS/layout';
 @import 'SASS/formulario';
 @import 'SASS/modal';
-//MATERIALIZE
-// Color
-@import "materialize/components/color-variables";
-@import "materialize/components/color-classes";
-@import 'materialize/components/variables';
-// Reset
-@import "materialize/components/normalize";
-@import "materialize/components/global";
-@import 'materialize/components/waves';
-@import 'materialize/components/buttons';
-@import 'materialize/components/tabs';
-@import "materialize/components/dropdown";
-@import 'materialize/components/forms/forms';
-@import 'materialize/components/forms/input-fields';
-@import 'materialize/components/forms/select';
+
 
 /*---LOGO_CARGA---*/
 .loader{
@@ -39,11 +25,50 @@
 }
 
 /*------ CLASES GLOBALES ------*/
+.modal{
+  overflow-y:inherit;
+  //overflow-x:auto;
+  max-height:100% !important;
+}
+.centered{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.back_section_icon{
+  position:absolute;
+  left:0;
+  top:0;
+}
+.material-icons.disabled{
+  color:$divider-color !important;
+  pointer-events: none !important;
+}
+.row{
+  margin-bottom:0;
+  display:flex;
+  flex-wrap:wrap;
+  &:after{
+    content:none;
+  }
+}
 
-.modal-content{
-  border:none;
-  border-radius:0;
-  box-shadow:0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
+.close{
+  cursor:pointer;
+  top:0;
+  right:0;
+  position:absolute;
+  color:#898989;
+  padding:5px;
+}
+.back{
+  cursor:pointer;
+  top:0;
+  left:0;
+  position:absolute;
+  color:#898989;
+  padding:5px;
 }
 .main-content{
   overflow:auto;
@@ -52,7 +77,6 @@
   display:none;
 }
 .divider{
-  border-bottom:1.5px solid $divider-color;
   margin:25px;
 }
 .info-divider{
@@ -98,6 +122,14 @@
     transform-origin: center center;
     transform: scale(0);
   }
+  &.hover-effect{
+    &:hover{
+      &:before{
+        opacity:.16;
+        transform:scale(.8);
+      }
+    }
+  }
 }
 .panel{
   background-color:#fafafa;
@@ -127,66 +159,53 @@
 }
 
 .tabs{
-  a{
-    text-decoration: none;
+  .tab{
+    a{
+      color:$light-primary-color;
+      &:hover, &.active{
+        color:$primary-color
+      }
+      &:focus, &:focus.active{
+        background-color:#b3dfdb2e;
+      }
+    }
   }
   .indicator{
     background-color: $dark-primary-color;
   }
 }
 
+.pager{
+  text-align:center;
+}
+
+table td{
+  border-radius:0;
+}
+.mr-2{
+  margin-top:2rem;
+}
 /*----BOTONES-----*/
 
-.btn-principal{
-  background-color:$color-resaltado;
-  color:$texto;
-  &:hover{
-    background-color:$dark-color-resaltado;
-  }
-}
-.btn-primary-color{
-  background-color:$primary-color;
-  color:$texto;
-  &:hover{
-    background-color:$dark-primary-color;
-  }
-}
-.btn-clarito{
-  background-color:$light-primary-color;
-  color:$texto;
-  &[type='submit']:hover {
-    transform: scale(1.1);
-  }
-}
-.btn,button{
-  &.outline{
-    border:solid 1px $color-resaltado;
-    background-color:transparent;
-    color:$color-resaltado;
-    &:hover{
-      background-color:$color-resaltado;
-      color:white;
+.main_add_button{
+  position:relative;
+  left:50%;
+  transform:translate(-50%,0);
+  margin-top:100px;
+  &.right{
+    margin-top:15px;
+    left:unset;
+    transform:translate(0,0);
+    @media #{$media} and #{$pantallaSmall}{
+      margin-right:5px;
     }
   }
-  &:focus{box-shadow: none;outline: none}
 }
-.btn-50{ width:50%;  }
-.btn-100{ width:100%; }
 
-.btn-form{
-  color:$texto;
-  font-size:1.2em;
-}
-.btn-cancel{
-  background-color:$cancel-color;
-}
-.btn-save{
-  background:$primary-color;
-}
-.btn-shadow{
-  box-shadow:0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-}
+
+
 /*---- ANIMACIONES ---*/
+
 @keyframes pulse{
   0%{
     opacity:0;
