ANtes de subir al servidor

--- a/public/css/SASS/_variables.scss
+++ b/public/css/SASS/_variables.scss
@@ -24,7 +24,7 @@ $imagen-inicio-fondo:url('../../imagenes/fondos/fondo-equipo.jpg');
 $media:'only screen';
 
 $pantallaSmall:'(min-device-width:320px) and (max-width:750px)';
-$pantallaMedia:'(max-device-width:1024px)';
+$pantallaMedia:'(max-width:1024px)';
 $pantallaGrande:'(min-width:1224px)';
 $pantallaExtraGrande:'(min-width:1824px)';
 
