--- a/public/css/SASS/layout.scss
+++ b/public/css/SASS/layout.scss
@@ -193,6 +193,9 @@ html,body{
     font-family:Comfortaa,cursive;
     font-weight: bold;
     text-transform: uppercase;
+    @media #{$media} and #{$pantallaMedia}{
+      font-size:2.5em;
+    }
   }
   @media #{$media} and #{$pantallaSmall}{
     height:60px;
