--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 .event_modal {
-  width: 25%;
   font-family: Raleway, sans-serif;
 }
 .event_modal #row_categorie_event {
@@ -1175,7 +1174,7 @@
 .yearView_body .ppns-cal_row {
   margin: 15px 0;
 }
-@media only screen and (max-device-width:1024px) {
+@media only screen and (max-width:1024px) {
   .yearView_body .ppns-cal_row {
     margin: 10px 0;
   }
