--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -193,7 +193,7 @@ table td{
   transform:translate(-50%,0);
   margin-top:100px;
   &.right{
-    margin-top:15px;
+    margin:15px 0;
     left:unset;
     transform:translate(0,0);
     @media #{$media} and #{$pantallaSmall}{
