--- a/public/css/mister.css
+++ b/public/css/mister.css
@@ -180,7 +180,7 @@
     height: 350px;
   }
 }
-@media only screen and (max-device-width:1024px) {
+@media only screen and (max-width:1024px) {
   .equipo-content {
     height: 400px;
   }
