--- a/public/css/login.css
+++ b/public/css/login.css
@@ -42,6 +42,11 @@
   opacity: 0;
   position: absolute;
 }
+@media only screen and (min-device-width:320px) and (max-width:750px) {
+  #registerClub-form-panel {
+    height: 100%;
+  }
+}
 
 .club-register-form {
   text-align: left;
