Registro admin correctamente y email de invitacion

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -589,6 +589,10 @@ table td, th {
   margin-top: 2rem;
 }
 
+.align-items-center {
+  align-items: center;
+}
+
 /*----BOTONES-----*/
 .main_add_button {
   position: relative;
