--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -185,6 +185,9 @@ table td,th{
 .mr-2{
   margin-top:2rem;
 }
+.align-items-center{
+  align-items: center;
+}
 /*----BOTONES-----*/
 
 .main_add_button{
